k8s/controllers/testdata/annotations.deployment.golden.yaml
metadata:
  creationTimestamp: null
  labels:
    managedBy: polar
    name: polar-annotations
  name: annotations
spec:
  selector:
    matchLabels:
      managedBy: polar
      name: polar-annotations
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        managedBy: polar
        name: polar-annotations
    spec:
      containers:
      - command:
        - /bootstrap/polar
        - exec
        - -log-json
        - -log-level
        - debug
        - -gateway-host
        - $(IP)
        - -gateway-ports
        - HTTP:http:80
        - -gateway-name
        - annotations
        - -consul-http-address
        - consul.localhost
        - -acl-auth-method
        - polar
        env:
        - name: IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        - name: HOST_IP
          valueFrom:
            fieldRef:
              fieldPath: status.hostIP
        image: hashicorp/special-envoy:0.0.0
        name: polar
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /bootstrap
          name: bootstrap
        - mountPath: /certs
          name: certs
      initContainers:
      - command:
        - cp
        - /bin/polar
        - /bootstrap/polar
        image: hashicorp/polar:0.0.0
        name: polar-init
        resources: {}
        volumeMounts:
        - mountPath: /bootstrap
          name: bootstrap
        - mountPath: /certs
          name: certs
      serviceAccountName: polar
      volumes:
      - emptyDir: {}
        name: bootstrap
      - emptyDir: {}
        name: certs
status: {}
