k8s/controllers/testdata/annotations.yaml

apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: annotations
  annotations:
    "polar.hashicorp.com/auth-method": "polar"
    "polar.hashicorp.com/image": "hashicorp/polar:0.0.0"
    "polar.hashicorp.com/service-account": "polar"
    "polar.hashicorp.com/envoy": "hashicorp/special-envoy:0.0.0"
    "polar.hashicorp.com/log-level": "debug"
    "polar.hashicorp.com/consul-http-address": "consul.localhost"
    "polar.hashicorp.com/consul-http-scheme": "http"
spec:
  listeners:  
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: Same
