k8s/controllers/testdata/annotations.golden.yaml
metadata:
  creationTimestamp: null
  name: annotations
spec:
  replicas: 3
  selector:
    matchLabels:
      name: polar
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: polar
    spec:
      containers:
      - command:
        - /bootstrap/polar
        - exec
        - -log-json
        - -log-level
        - debug
        - -gateway-host-port
        - $(IP):80
        - -gateway-name
        - annotations
        - -consul-http-address
        - consul.localhost
        - -acl-auth-method
        - polar
        env:
        - name: IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        - name: HOST_IP
          valueFrom:
            fieldRef:
              fieldPath: status.hostIP
        image: hashicorp/special-envoy:0.0.0
        name: polar
        resources: {}
        volumeMounts:
        - mountPath: /bootstrap
          name: bootstrap
        - mountPath: /certs
          name: certs
      initContainers:
      - command:
        - cp
        - /bin/polar
        - /bootstrap/polar
        image: hashicorp/polar:0.0.0
        name: polar-init
        resources: {}
        volumeMounts:
        - mountPath: /bootstrap
          name: bootstrap
        - mountPath: /certs
          name: certs
      serviceAccountName: polar
      volumes:
      - emptyDir: {}
        name: bootstrap
      - emptyDir: {}
        name: certs
status: {}
