k8s/controllers/testdata/clusterip.service.golden.yaml
metadata:
  creationTimestamp: null
  labels:
    managedBy: polar
    name: polar-clusterip
  name: clusterip
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 0
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 0
  selector:
    managedBy: polar
    name: polar-clusterip
  type: ClusterIP
status:
  loadBalancer: {}
