k8s/controllers/testdata/invalid-node-selector.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: invalid-node-selector
  annotations:
    "polar.hashicorp.com/node-selector": >
      {"ingress
spec:
  gatewayClassName: polar
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: Same
  - protocol: HTTPS
    port: 8443
    name: https
    allowedRoutes:
      namespaces:
        from: Same
