k8s/controllers/testdata/loadbalancer.service.golden.yaml
metadata:
  creationTimestamp: null
  labels:
    managedBy: polar
    name: polar-loadbalancer
  name: loadbalancer
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 0
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 0
  selector:
    managedBy: polar
    name: polar-loadbalancer
  type: LoadBalancer
status:
  loadBalancer: {}
