k8s/controllers/testdata/node-selector.service.golden.yaml
metadata:
  creationTimestamp: null
  labels:
    managedBy: polar
    name: polar-node-selector
  name: node-selector
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 0
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 0
  selector:
    managedBy: polar
    name: polar-node-selector
  type: NodePort
status:
  loadBalancer: {}
