k8s/controllers/testdata/node-selector.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: node-selector
  annotations:
    "polar.hashicorp.com/node-selector": >
      {"ingress-ready":"true"}
    "polar.hashicorp.com/service-type": "NodePort"
    "polar.hashicorp.com/consul-http-address": "host.docker.internal:443"
    "polar.hashicorp.com/image": "polar:1"
    "polar.hashicorp.com/auth-method": "polar"
    "polar.hashicorp.com/service-account": "polar"
    "polar.hashicorp.com/envoy": "polar:1"
spec:
  gatewayClassName: polar
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: Same
  - protocol: HTTPS
    port: 8443
    name: https
    allowedRoutes:
      namespaces:
        from: Same
