k8s/controllers/testdata/tls-cert.yaml

apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: annotations
  annotations:
    "polar.hashicorp.com/consul-http-scheme": "https"
    "polar.hashicorp.com/consul-ca-secret": "super-secret"
spec:
  listeners:  
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: Same
